tests/negative/lexer/char-eof.orng
fn main() -> Int {
    let x = 'this character doesnt have an end!